# Ventura-Flow

./: .env.example  .gitignore  AGENT_GUIDE.md  LICENSE  LLM_test.ipynb  README.md  colab_setup.ipynb  colab_setup.py  pipeline.py  prompts.py  pyproject.toml  requirements.txt  sample_input.json  test.ipynb
agents/: JUDGE_AGENT.md  bear_analyst.py  bear_researcher.py  bull_analyst.py  bull_researcher.py  judge_agent.py  query_planner.py  triage_agent.py
graph/: state.py
gui/: app.py  pdf_export.py  server.py
gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
gui/frontend/src/: App.tsx  api.ts  store.ts  styles.css  types.ts
gui/frontend/src/components/: AuthorHoverCard.tsx  CountUp.tsx  PipelineStages.tsx  Sparkline.tsx  StarButton.tsx  Terminal.tsx
gui/frontend/src/pages/: AuthorFilters.tsx  Home.tsx  PaperDetail.tsx  PastRuns.tsx  Preferences.tsx  Rankings.tsx  Watchlist.tsx
gui/static/: index.html
investor_signal_mcp/: __init__.py  server.py
memory_mcp/: __init__.py  server.py
orchestration/: __init__.py  autonomous.py  dedup.py  deep_ingest.py  digest.py  diversity.py  events.py  pipeline.py
outputs/: 20260417_034413_bull_queries.json  20260417_034413_bull_search_raw.json  20260417_035457_bear_queries.json  20260417_035457_bear_search_raw.json  20260417_043338_bear_brief.md  20260417_043338_bear_search_raw.json  20260417_043338_bull_brief.md  20260417_043338_bull_search_raw.json
papers_mcp/: __init__.py  openalex.py  semantic_scholar.py  server.py
research_outputs/: 20260417_035032_bull_queries.json  20260417_035032_bull_search_raw.json  20260417_043338_bear_queries.json  20260417_043338_bull_queries.json
scripts/: list_ingested.py  run_investor_signal_mcp.sh  run_memory_mcp.sh  run_papers_mcp.sh  test_pipeline.py
shared/: __init__.py  config.py  db.py  embeddings.py  models.py  vc_profile.py  vector_store.py
tests/: conftest.py  test_heuristic_fallback.py  test_scoring_ollama.py  test_threshold_honors_user_input.py
tools/: llm.py  search.py
