[project]
name = "research-intelligence"
version = "0.1.0"
description = "End-to-end research intelligence pipeline with MCP servers for OpenCode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "rich>=13.0.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "shared",
    "papers_mcp",
    "memory_mcp",
    "investor_signal_mcp",
    "orchestration",
]

[tool.hatch.build.targets.sdist]
include = [
    "shared/",
    "papers_mcp/",
    "memory_mcp/",
    "investor_signal_mcp/",
    "orchestration/",
    "scripts/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
